my-apps/media/tubesync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubesync
  namespace: tubesync
  labels:
    app: tubesync
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tubesync
  template:
    metadata:
      labels:
        app: tubesync
    spec:
      containers:
      - name: tubesync
        image: ghcr.io/meeb/tubesync:v0.18.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4848
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /downloads
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 2Gi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
